feat: dagger slides
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,5 +10,7 @@ format:
     transition: slide
     controls: true
     controls-layout: bottom-right
+    center: true
+    navigation-mode: vertical
     template-partials:
       - resources/templates/revealjs/title-slide.html
